--- a/glutose-FE/package.json
+++ b/glutose-FE/package.json
@@ -11,8 +11,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "chart.js": "^4.4.5",
     "pinia": "^2.2.4",
     "vue": "^3.5.11",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
