--- a/glutose-FE/package.json
+++ b/glutose-FE/package.json
@@ -16,6 +16,7 @@
     "pinia": "^2.2.4",
     "vue": "^3.5.11",
     "vue-chartjs": "^5.3.1",
+    "vue-i18n": "^10.0.4",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
