--- a/glutose-FE/package.json
+++ b/glutose-FE/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.5",
     "pinia": "^2.2.4",
+    "tocas": "^5.0.1",
     "vue": "^3.5.11",
     "vue-chartjs": "^5.3.1",
     "vue-i18n": "^10.0.4",
