--- a/glucose-mobi/Android/.gitignore
+++ b/glucose-mobi/Android/.gitignore
@@ -8,10 +8,13 @@
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
 .DS_Store
-/build
-!build/outputs/apk/debug/app-debug.apk
 /captures
 .externalNativeBuild
 .cxx
 .idea
 local.properties
+
+/app/build/
+!/app/build/outputs/apk/debug/app-debug.apk
+
+/app/src/main/res/values/strings.xml
