--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 rest-test/
 glucose-BE/glucoseBE/db.sqlite3
+glucose-BE/glucoseBE/media/uploads/
 glucose-mobi/Android/app/release/
 glucose-mobi/Android/app/src/main/res/values/token.xml
 **/node_modules/
