--- a/glucose-mobi/Android/gradle/libs.versions.toml
+++ b/glucose-mobi/Android/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 agp = "8.4.2"
 biometric = "1.1.0"
-kotlin = "1.9.0"
+kotlin = "2.0.0"
 coreKtx = "1.15.0"
 appcompat = "1.7.0"
 material = "1.12.0"
@@ -10,6 +10,7 @@ constraintlayout = "2.2.0"
 mpandroidchart = "v3.1.0"
 navigationFragmentKtx = "2.8.6"
 navigationUiKtx = "2.8.6"
+okhttp = "4.12.0"
 playServicesAuthVersion = "21.3.0"
 retrofit = "2.9.0"
 
@@ -25,6 +26,7 @@ androidx-constraintlayout = { group = "androidx.constraintlayout", name = "const
 androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigationFragmentKtx" }
 androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtx" }
 mpandroidchart = { module = "com.github.PhilJay:MPAndroidChart", version.ref = "mpandroidchart" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 
 [plugins]
