--- a/glucose-mobi/Android/app/src/main/AndroidManifest.xml
+++ b/glucose-mobi/Android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="Diabeat"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:theme="@style/Theme.Diabeat"
+        android:theme="@style/Base.Theme.Diabeat"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
@@ -23,6 +23,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
 
     </application>
 
