--- a/glucose-mobi/Android/app/src/main/AndroidManifest.xml
+++ b/glucose-mobi/Android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="Diabeat"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:theme="@style/Base.Theme.Diabeat"
+        android:theme="@style/Theme.Diabeat"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
@@ -26,7 +26,7 @@
 
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="${applicationId}.fileprovider"
+            android:authorities="rl.collab.diabeat.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
