--- a/glucose-mobi/Android/app/src/main/AndroidManifest.xml
+++ b/glucose-mobi/Android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
 
     <application
         android:allowBackup="false"
+        android:dataExtractionRules="@null"
+        android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:label="Diabeat"
         android:roundIcon="@mipmap/ic_launcher_round"
