--- a/glucose-FE/package.json
+++ b/glucose-FE/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "axios": "^1.7.7",
     "chart.js": "^4.4.5",
+    "marked": "^15.0.7",
     "pinia": "^2.2.4",
     "tocas": "^5.0.1",
     "vue": "^3.5.11",
     "vue-chartjs": "^5.3.1",
     "vue-i18n": "^10.0.4",
+    "vue-marked": "^0.1.1",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
