--- a/glucose-FE/package.json
+++ b/glucose-FE/package.json
@@ -12,32 +12,32 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.16",
-    "axios": "^1.7.7",
-    "chart.js": "^4.4.5",
-    "marked": "^15.0.7",
-    "pinia": "^2.2.4",
-    "tocas": "^5.0.1",
-    "vue": "^3.5.11",
-    "vue-chartjs": "^5.3.1",
-    "vue-i18n": "^10.0.4",
-    "vue-marked": "^0.1.1",
-    "vue-router": "^4.4.5"
+    "@tailwindcss/aspect-ratio": "0.4.2",
+    "@tailwindcss/forms": "0.5.10",
+    "@tailwindcss/typography": "0.5.16",
+    "axios": "1.7.7",
+    "chart.js": "4.4.5",
+    "marked": "15.0.7",
+    "pinia": "2.2.4",
+    "tocas": "5.0.1",
+    "vue": "3.5.12",
+    "vue-chartjs": "5.3.1",
+    "vue-i18n": "10.0.4",
+    "vue-marked": "0.1.1",
+    "vue-router": "4.4.5"
   },
   "devDependencies": {
-    "@eslint/js": "^9.12.0",
-    "@vitejs/plugin-vue": "^5.1.4",
-    "@vitejs/plugin-vue-jsx": "^4.0.1",
-    "@vue/eslint-config-prettier": "^10.0.0",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.12.0",
-    "eslint-plugin-vue": "^9.28.0",
-    "gh-pages": "^6.2.0",
-    "postcss": "^8.4.47",
-    "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.14",
-    "vite": "^5.4.8"
+    "@eslint/js": "9.12.0",
+    "@vitejs/plugin-vue": "5.1.4",
+    "@vitejs/plugin-vue-jsx": "4.0.1",
+    "@vue/eslint-config-prettier": "10.0.0",
+    "autoprefixer": "10.4.20",
+    "eslint": "9.12.0",
+    "eslint-plugin-vue": "9.29.0",
+    "gh-pages": "6.2.0",
+    "postcss": "8.4.47",
+    "prettier": "3.3.3",
+    "tailwindcss": "3.4.14",
+    "vite": "5.4.9"
   }
 }
